--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,104 @@
 <!DOCTYPE html>
-<html lang="zh-TW">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>賴田捕手</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Face Club</title>
+    <style>
+        th, td, p, input, h3 {
+            font:15px 'Segoe UI';
+        }
+        table, th, td {
+            border: solid 1px #ddd;
+            border-collapse: collapse;
+            padding: 2px 3px;
+            text-align: center;
+        }
+        th {
+            font-weight:bold;
+        }
+    </style>
+    <script>
+        let fetchQueryResult = () => {
+            const xmlHttp = new XMLHttpRequest();
+            xmlHttp.onreadystatechange = function () {
+                if (xmlHttp.readyState === 4) {
+                    if (xmlHttp.status === 200) {
+                        console.log(xmlHttp.responseText);
+                        const data = JSON.parse(xmlHttp.responseText);
+                        if (Array.isArray(data)) {
+                            document.getElementById("msg").innerText = "Received data at "+ new Date().toLocaleString();
+                            tableFromJson(data);
+                        }else{
+                            let status = data.status;
+                            let message = data.message;
+                            document.getElementById("msg").innerText = status + " - " + message;
+                        }
+                    }else{
+                        const data = xmlHttp.responseText;
+                        document.getElementById("msg").innerText = data;
+                    }
+                }
+            };
+            xmlHttp.open("GET", "/job/list", true);
+            xmlHttp.setRequestHeader("Content-type", "text/plain");
+            document.getElementById("msg").innerText = "Executing ...";
+            xmlHttp.send();
+        }
+
+        let tableFromJson = (arrayData) => {
+
+            // Extract value from table header.
+            // ('Book ID', 'Book Name', 'Category' and 'Price')
+            let col = [];
+            for (let i = 0; i < arrayData.length; i++) {
+                for (let key in arrayData[i]) {
+                    if (col.indexOf(key) === -1) {
+                        col.push(key);
+                    }
+                }
+            }
+
+            // Create a table.
+            const table = document.createElement("table");
+
+            // Create table header row using the extracted headers above.
+            let tr = table.insertRow(-1);                   // table row.
+
+            for (let i = 0; i < col.length; i++) {
+                let th = document.createElement("th");      // table header.
+                th.innerHTML = col[i];
+                tr.appendChild(th);
+            }
+
+            // add json data to the table as rows.
+            for (let i = 0; i < arrayData.length; i++) {
+
+                tr = table.insertRow(-1);
+
+                for (let j = 0; j < col.length; j++) {
+                    let tabCell = tr.insertCell(-1);
+                    tabCell.innerHTML = arrayData[i][col[j]];
+                }
+            }
+
+            // Now, add the newly created table with json data, to a container.
+            const divShowData = document.getElementById('showData');
+            divShowData.innerHTML = "";
+            divShowData.appendChild(table);
+        }
+    </script>
 </head>
 <body>
-  <h1>賴田捕手第 20 天</h1>
-  <p>全身都是肌肉沒半點腦子。反正，那就是鄭尼那晚照顧的草泥馬。我完全無法了解，我發誓我沒辦法。</p>
+	<h3>
+    	Click the button to create a dynamic table using data extracted from a JSON array.
+    </h3>
+    <input type='button' onclick='fetchQueryResult("job_status")'
+    	value='Job Status' />
+
+    <p id='showData'></p>
+
+    <p id='msg'></p>
 </body>
+
 </html>
