--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Face Club</title>
+    <link rel="icon" href="{{ url_for('static', filename='images/face.png') }}" type="image/x-icon" />
     <style>
         th, td, p, input, h3 {
             font:15px 'Segoe UI';
