rename Workspace class, show file list of dataset

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,8 +21,14 @@
     	value='Copy Images To Workspace' />
     <input type='button' onclick='fetchQueryResult("list_faces")'
     	value='List Faces in Workspace' />
+    <input type='button' onclick='fetchQueryResult("list_dataset_people")'
+    	value='List Dataset People' />
+    <input type='button' onclick='fetchQueryResult("list_dataset_files")'
+    	value='List Dataset Files' />
     <input type='button' onclick='fetchQueryResult("list_dataset_backups")'
     	value='List Dataset Backups' />
+    <input type='button' onclick='fetchQueryResult("list_model_backups")'
+    	value='List Model Backups' />
 
     <p id='showData'></p>
 
