--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
     <input type='button' onclick='fetchQueryResult("copy_images")'
     	value='Copy Images To Workspace' />
     <input type='button' onclick='fetchQueryResult("list_faces")'
-    	value='List Faces in Workspace' />
+    	value='List Images in Workspace' />
     <input type='button' onclick='fetchQueryResult("list_dataset_people")'
     	value='List Dataset People' />
     <input type='button' onclick='fetchQueryResult("list_dataset_files")'
@@ -33,6 +33,8 @@
     	value='List Model Backups' />
     <input type='button' onclick='streamQueryResult("start_training", ["training_progress", "peopleId", "state", "file"])'
     	value='Start Training' />
+    <input type='button' onclick='streamQueryResult("start_recognition", ["training_progress"])'
+    	value='Start Recognition' />
 
     <p id='msg'></p>
 
