perform recognition with original picture files

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
     	value='List Model Backups' />
     <input type='button' onclick='streamQueryResult("start_training", ["training_progress", "peopleId", "state", "file"])'
     	value='Start Training' />
-    <input type='button' onclick='streamQueryResult("start_recognition", ["recognition_progress", "peopleId", "state", "face_file", "source_file"])'
+    <input type='button' onclick='streamQueryResult("start_recognition", ["recognition_progress", "peopleId", "state", "face_file", "source_file", "file_size_kb", "time_cost_sec", "pic_size", "pic_channels"])'
     	value='Start Recognition' />
 
     <p id='msg'></p>
