db query filter for better review

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,8 @@
     	value='Copy Images To Workspace' />
     <input type='button' onclick='fetchQueryResult("list_faces")'
     	value='List Images in Workspace' />
+    <input type='button' onclick='fetchQueryResult("list_scanned_faces")'
+    	value='List Scanned Faces' />
     <input type='button' onclick='fetchQueryResult("list_dataset_people")'
     	value='List Dataset People' />
     <input type='button' onclick='fetchQueryResult("list_dataset_files")'
