--- a/templates/canvas.html
+++ b/templates/canvas.html
@@ -47,7 +47,7 @@
         </div>
         <div class="modal-body">
             <div id="preview">
-                <canvas id="preview_canvas" width="80px" height="80px"></canvas>
+                <canvas id="preview_canvas"></canvas>
             </div>
             <div id="personIcon">
                 <img id="personIconImg" src="{{ url_for('static', filename='images/unknown.png') }}" width="80" height="80" alt="face">
