--- a/static/css/canvas.css
+++ b/static/css/canvas.css
@@ -203,3 +203,46 @@ input[type=button] {
   background-color: DodgerBlue !important;
   color: #ffffff;
 }
+
+/* Style the links inside the sidenav */
+#canvasSidenav a {
+  position: absolute; /* Position them relative to the browser window */
+  left: -78px; /* Position them outside of the screen */
+  transition: 0.3s; /* Add transition on hover */
+  padding: 5px; /* 15px padding */
+  width: 80px; /* Set a specific width */
+  text-decoration: none; /* Remove underline */
+  font-size: 12px; /* Increase font size */
+  color: white; /* White text color */
+  border-radius: 0 5px 5px 0; /* Rounded corners on the top right and bottom right side */
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+#canvasSidenav a:hover {
+  left: 0; /* On mouse-over, make the elements appear as they should */
+}
+
+/* The about link: 20px from the top with a green background */
+#navUntagAll {
+    text-align: center;
+    top: 10px;
+    background-color: #f44336; /* Red */
+}
+
+#navHideTags {
+    text-align: center;
+    top: 50px;
+    background-color: #2196F3; /* Blue */
+}
+
+#navShowTags {
+    text-align: center;
+    top: 90px;
+    background-color: #04AA6D;
+}
+
+#navRestore {
+    text-align: center;
+    top: 130px;
+    background-color: #555555;
+}
