determine final people id, fix bugs

--- a/templates/canvas.html
+++ b/templates/canvas.html
@@ -32,6 +32,7 @@
         }
 
         function init() {
+            console.log(datas);
             initDraw(document.getElementById('canvas'));
             window.scrollTo(0,0);
             console.log("initiated " + datas.length + " tags");
