change scanWrong to viewed

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,10 +19,10 @@
     	value='Job Status' />
     <input type='button' onclick='fetchQueryResult("copy_images")'
     	value='Copy Images To Workspace' />
-    <input type='button' onclick='fetchQueryResult("list_faces")'
+    <input type='button' onclick='fetchQueryResult("list_images")'
     	value='List Images in Workspace' />
-    <input type='button' onclick='fetchQueryResult("list_scanned_faces")'
-    	value='List Scanned Faces' />
+    <input type='button' onclick='fetchQueryResult("list_tagged_images")'
+    	value='List Tagged Images in Workspace' />
     <input type='button' onclick='fetchQueryResult("list_dataset_people")'
     	value='List Dataset People' />
     <input type='button' onclick='fetchQueryResult("list_dataset_files")'
