add runByJob flag, streamline images db query

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,8 @@
     	value='List Images in Workspace' />
     <input type='button' onclick='fetchQueryResult("list_tagged_images")'
     	value='List Tagged Images in Workspace' />
+    <input type='button' onclick='fetchQueryResult("list_untagged_images")'
+    	value='List Untagged Images in Workspace' />
     <input type='button' onclick='fetchQueryResult("list_dataset_people")'
     	value='List Dataset People' />
     <input type='button' onclick='fetchQueryResult("list_dataset_files")'
